# sistema-bancario

./: .gitignore  ISTRUZIONI.md  Makefile  README.md  build_project.sh  install.sh  install_dependencies.sh  installazione.md  needed_packages.txt  tanzomat.py
runtime/: Makefile  config.json  database.db  database.sql  legacy.db
runtime/static/: index.html  transfer
runtime/static/css/: banner.css  banner.css~  index.css
runtime/static/js/: index.js
runtime/static/kanban/: index.html
runtime/static/kanban/css/: main.css
runtime/static/kanban/js/api/: KanbanAPI.js
runtime/static/kanban/js/view/: Kanban.js
source/: CMakeLists.backup  CMakeLists.txt  main.cpp
source/codec/: Codec.cpp  Codec.hpp
source/common/: FastResponse.cpp  FastResponse.hpp  Validation.cpp  Validation.hpp
source/custom/: CMakeLists.txt  Config.cpp  Config.hpp
source/database/: CMakeLists.txt  Database.cpp  Database.cpp~  Database.hpp  Database.hpp~
source/logging/: Logging.cpp  Logging.hpp
source/politik/: CMakeLists.txt  ControllerFactory.cpp  ControllerFactory.hpp  Detection.cpp  Detection.hpp
source/rest/: ApiAccountController.cpp  ApiAccountController.hpp  ApiAccountDetailsController.cpp  ApiAccountDetailsController.cpp~  ApiAccountDetailsController.hpp  ApiController.cpp  ApiController.hpp  ApiDivertController.cpp  ApiDivertController.hpp  ApiTransactionDetailsController.cpp  ApiTransactionDetailsController.cpp~  ApiTransactionDetailsController.hpp  ApiTransactionDetailsController.hpp~  ApiTransferController.cpp  ApiTransferController.hpp  CMakeLists.txt  FastResponse.cpp  FastResponse.hpp  RestControllerFactory.cpp  RestControllerFactory.hpp  RestEndpointController.cpp  RestEndpointController.hpp  RestNextController.cpp  RestNextController.hpp  RestRootController.cpp  RestRootController.hpp  Validation.cpp  Validation.hpp  WrongPathController.cpp  WrongPathController.hpp
source/server/: CMakeLists.txt  ServerPool.cpp  ServerPool.hpp  ServerPoolFactory.cpp  ServerPoolFactory.hpp  StaticController.cpp  StaticController.hpp  StaticControllerFactory.cpp  StaticControllerFactory.hpp
source/singleton/: CMakeLists.txt  Singleton.cpp  Singleton.hpp
source/static/: CMakeLists.txt  StaticController.cpp  StaticController.hpp  StaticControllerFactory.cpp  StaticControllerFactory.hpp
source/static_engine/: CMakeLists.txt  StaticController.cpp  StaticController.hpp  Validation.cpp  Validation.hpp
source/utility/: CMakeLists.txt  Utility.cpp  Utility.hpp
testing/: Makefile  config.json  result.csv  tanzomat.json  tanzomat.py  zerstorer.py
